tests/baselines/reference/pushTypeGetTypeOfAlias.errors.txt
tests/cases/compiler/bar.js(2,2): error TS2303: Circular definition of import alias 'blah'.
tests/cases/compiler/bar.js(2,25): error TS2339: Property 'someProp' does not exist on type '{ (): void; blah: any; }'.


==== tests/cases/compiler/bar.js (2 errors) ====
    module.exports = function () {};
     exports.blah = exports.someProp;
     ~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'blah'.
                            ~~~~~~~~
!!! error TS2339: Property 'someProp' does not exist on type '{ (): void; blah: any; }'.